[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/box/randomchest1.png" type="Texture" id=1]
[ext_resource path="res://assets/box/randomchest3.png" type="Texture" id=2]
[ext_resource path="res://assets/box/randomchest2.png" type="Texture" id=3]
[ext_resource path="res://assets/box/randomchest0.png" type="Texture" id=4]
[ext_resource path="res://Mystery Box.gd" type="Script" id=5]
[ext_resource path="res://assets/box/button.png" type="Texture" id=6]
[ext_resource path="res://assets/box/opened/chest_open1.png" type="Texture" id=7]
[ext_resource path="res://assets/box/opened/chest_open4.png" type="Texture" id=8]
[ext_resource path="res://assets/box/opened/chest_open6.png" type="Texture" id=9]
[ext_resource path="res://assets/box/opened/chest_open0.png" type="Texture" id=10]
[ext_resource path="res://assets/box/opened/chest_open2.png" type="Texture" id=11]
[ext_resource path="res://assets/box/opened/chest_open7.png" type="Texture" id=12]
[ext_resource path="res://assets/box/opened/chest_open3.png" type="Texture" id=13]
[ext_resource path="res://assets/box/opened/chest_open5.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "opened",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 12 ) ],
"loop": true,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60.7049, 28.1712 )

[sub_resource type="CircleShape2D" id=3]
radius = 92.5411

[node name="AnimatedSprite" type="AnimatedSprite" groups=[
"lootBoxes",
]]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "opened"
playing = true
script = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0.330709, 31.9137 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SceneControl" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -14.9377
margin_top = -129.336
margin_right = 17.0623
margin_bottom = -97.3364
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
